working on notebooks

--- a/XC Char With Type Hints.ipynb
+++ b/XC Char With Type Hints.ipynb
@@ -5,18 +5,17 @@
    "id": "90efca65",
    "metadata": {},
    "source": [
-    "### Pydantic adds run-time validation"
+    "### Once you understand type hints this code will be very clear"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "29504f4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Literal, Annotated\n",
-    "from pydantic import BaseModel, Field, ConfigDict\n",
+    "from typing import TypedDict, Literal\n",
     "\n",
     "\n",
     "AttributeName = Literal[\n",
@@ -28,20 +27,16 @@
     "    \"Presence\",\n",
     "]\n",
     "\n",
-    "AttributeValue = Annotated[int, Field(ge=0, le=100)]\n",
-    "\n",
-    "class Attributes(BaseModel):\n",
-    "    model_config = ConfigDict(validate_assignment=True)\n",
-    "    \n",
-    "    Might: AttributeValue\n",
-    "    Agility: AttributeValue\n",
-    "    Vitality: AttributeValue\n",
-    "    Insight: AttributeValue\n",
-    "    Arcana: AttributeValue\n",
-    "    Presence: AttributeValue\n",
+    "class Attributes(TypedDict):\n",
+    "    Might: int\n",
+    "    Agility: int\n",
+    "    Vitality: int\n",
+    "    Insight: int\n",
+    "    Arcana: int\n",
+    "    Presence: int\n",
     "\n",
     "\n",
-    "class Character(BaseModel):\n",
+    "class Character(TypedDict):\n",
     "    name: str\n",
     "    attributes: Attributes\n",
     "\n",
@@ -51,25 +46,22 @@
     "    attribute_name: AttributeName,\n",
     "    delta: int,\n",
     ") -> Character:\n",
-    "    current_value = getattr(character.attributes, attribute_name)\n",
-    "    new_value = current_value + delta\n",
-    "\n",
-    "    # Re-assignment triggers Pydantic validation\n",
-    "    setattr(character.attributes, attribute_name, new_value)\n",
-    "\n",
+    "    character[\"attributes\"][attribute_name] += delta\n",
     "    return character\n",
     "\n",
-    "character = Character(\n",
-    "    name=\"Aelar\",\n",
-    "    attributes=Attributes(\n",
-    "        Might=10,\n",
-    "        Agility=8,\n",
-    "        Vitality=12,\n",
-    "        Insight=14,\n",
-    "        Arcana=16,\n",
-    "        Presence=11,\n",
-    "    ),\n",
-    ")"
+    "character: Character = {\n",
+    "    \"name\": \"Aelar\",\n",
+    "    \"attributes\": {\n",
+    "        \"Might\": 10,\n",
+    "        \"Agility\": 8,\n",
+    "        \"Vitality\": 12,\n",
+    "        \"Insight\": 14,\n",
+    "        \"Arcana\": 16,\n",
+    "        \"Presence\": 11,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "print(character)"
    ]
   },
   {
@@ -77,12 +69,13 @@
    "id": "838d983f",
    "metadata": {},
    "source": [
-    "### Real world example"
+    "### What if we ignore the type warnings\n",
+    "- Python will execute without warning\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "577fb08e",
    "metadata": {},
    "outputs": [
@@ -90,23 +83,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name='Aelar' attributes=Attributes(Might=100, Agility=8, Vitality=12, Insight=14, Arcana=16, Presence=11)\n"
+      "{'name': 'Aelar', 'attributes': {'might': 'Big mistake', 'Agility': 8, 'Vitality': 12, 'Insight': 14, 'Arcana': 16, 'Presence': 11}}\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "character = Character.model_validate({\n",
+    "character: Character = {\n",
     "    \"name\": \"Aelar\",\n",
     "    \"attributes\": {\n",
-    "        \"Might\": 100,\n",
+    "        \"might\": \"Big mistake\",\n",
     "        \"Agility\": 8,\n",
     "        \"Vitality\": 12,\n",
     "        \"Insight\": 14,\n",
     "        \"Arcana\": 16,\n",
     "        \"Presence\": 11,\n",
     "    },\n",
-    "})\n",
+    "}\n",
+    "\n",
     "\n",
     "print(character)"
    ]
@@ -122,10 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f779916",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'update_attribute' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mupdate_attribute\u001b[49m(character, \u001b[33m\"\u001b[39m\u001b[33mMight\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m2\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'update_attribute' is not defined"
+     ]
+    }
+   ],
    "source": [
     "update_attribute(character, \"Might\", 2)"
    ]
