finished What has recently changed notebook

--- a/1 The Basics.ipynb
+++ b/1 The Basics.ipynb
@@ -10,15 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "29504f4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def say_hi(name):\n",
-    "    return f\"Hey {name.strip().title()}!\"\n",
-    "\n",
-    "print(say_hi(\"  arion silvaris \"))"
+    "    return f\"Hey {name.strip().title()}!\""
    ]
   },
   {
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d28a3406",
    "metadata": {},
    "outputs": [],
@@ -41,8 +39,16 @@
     "    Input: name: str (no other type supported)\n",
     "    Output: str\n",
     "    \"\"\"\n",
-    "    return f\"Hey {name.strip().title()}!\"\n",
-    "\n",
+    "    return f\"Hey {name.strip().title()}!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9ea2564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(say_hi(\"  arion silvaris \"))"
    ]
   },
@@ -82,8 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(say_hi(\"  arion silvaris \"))\n",
-    "# print(say_hi([\"  arion silvaris \"]))"
+    "print(say_hi([\"  arion silvaris \"]))"
    ]
   },
   {
@@ -103,8 +108,8 @@
    "source": [
     "def total_character_count(words):\n",
     "    total = 0\n",
-    "    for word in words:\n",
-    "        total += len(word)\n",
+    "    for char in words:\n",
+    "        total += len(char)\n",
     "    return total\n",
     "\n",
     "print(total_character_count([\"Hello\", \" world!\"]))"
@@ -127,8 +132,8 @@
    "source": [
     "def total_character_count(words: list[str]) -> int:\n",
     "    total = 0\n",
-    "    for word in words:\n",
-    "        total += len(word)\n",
+    "    for char in words:\n",
+    "        total += len(char)\n",
     "    return total\n",
     "\n",
     "print(total_character_count([\"Hello\", \" world!\"]))"
@@ -153,8 +158,8 @@
     "\n",
     "def total_character_count(words: Iterable[str]) -> int:\n",
     "    total = 0\n",
-    "    for word in words:\n",
-    "        total += len(word)\n",
+    "    for char in words:\n",
+    "        total += len(char)\n",
     "    return total\n",
     "\n",
     "print(total_character_count([\"Hello\", \" world!\"]))               # list of strings\n",
@@ -162,7 +167,8 @@
     "print(total_character_count({\"Hello\", \" world!\"}))               # set of strings\n",
     "print(total_character_count(word for word in [\"Hello\", \" world!\"])) # generator yielding strings\n",
     "print(total_character_count(iter([\"Hello\", \" world!\"])))         # iterator of strings\n",
-    "print(total_character_count(\"Hello world!\"))                           # string (iterates over characters)"
+    "print(total_character_count(\"Hello world!\"))  \n",
+    "#print(total_character_count(1)) "
    ]
   }
  ],
