--- a/4 Char Pydantic for API.ipynb
+++ b/4 Char Pydantic for API.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "29504f4b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "    \"Presence\",\n",
     "]\n",
     "\n",
-    "AttributeValue = Annotated[int, Field(ge=0, le=100)]\n",
+    "AttributeValue = Annotated[int, Field(description=\"Attribute value can be between 1 and 100\",ge=1, le=100)]\n",
     "\n",
     "class Attributes(BaseModel):\n",
     "    model_config = ConfigDict(validate_assignment=True)\n",
@@ -82,32 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "577fb08e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name='Aelar' attributes=Attributes(Might=100, Agility=8, Vitality=12, Insight=14, Arcana=16, Presence=11)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "character = Character.model_validate({\n",
     "    \"name\": \"Aelar\",\n",
     "    \"attributes\": {\n",
-    "        \"Might\": 100,\n",
+    "        \"Might\": 120,\n",
     "        \"Agility\": 8,\n",
     "        \"Vitality\": 12,\n",
     "        \"Insight\": 14,\n",
     "        \"Arcana\": 16,\n",
     "        \"Presence\": 11,\n",
     "        \"tset\": 123,\n",
-    "    },\n",
-    "})\n",
+    "    }\n",
+    "}\n",
+    ")\n",
     "\n",
     "print(character)"
    ]
@@ -117,27 +110,16 @@
    "id": "bf0d2f3e",
    "metadata": {},
    "source": [
-    "### This function call is 100% correct according to the spec\n",
-    "- Data corruption will lead to unexpected down-the-road issues"
+    "### Now with Pydantic our Domain Data standards are protected at run-time\n",
+    "- Invalid data is blocked at the boundaries of our system"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6f779916",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Character(name='Aelar', attributes=Attributes(Might=98, Agility=8, Vitality=12, Insight=14, Arcana=16, Presence=11))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "update_attribute(character, \"Might\", -2)"
    ]
