--- a/3 Char With Type Hints.ipynb
+++ b/3 Char With Type Hints.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "29504f4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Aelar', 'attributes': {'Might': 10, 'Agility': 8, 'Vitality': 12, 'Insight': 14, 'Arcana': 16, 'Presence': 11}}\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import TypedDict, Literal\n",
     "\n",
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "577fb08e",
    "metadata": {},
    "outputs": [
@@ -120,14 +128,15 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'update_attribute' is not defined",
+     "ename": "KeyError",
+     "evalue": "'Might'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mupdate_attribute\u001b[49m(character, \u001b[33m\"\u001b[39m\u001b[33mMight\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m2\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'update_attribute' is not defined"
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mupdate_attribute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcharacter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMight\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 32\u001b[39m, in \u001b[36mupdate_attribute\u001b[39m\u001b[34m(character, attribute_name, delta)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mupdate_attribute\u001b[39m(\n\u001b[32m     28\u001b[39m     character: Character,\n\u001b[32m     29\u001b[39m     attribute_name: AttributeName,\n\u001b[32m     30\u001b[39m     delta: \u001b[38;5;28mint\u001b[39m,\n\u001b[32m     31\u001b[39m ) -> Character:\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m     \u001b[43mcharacter\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mattributes\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mattribute_name\u001b[49m\u001b[43m]\u001b[49m += delta\n\u001b[32m     33\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m character\n",
+      "\u001b[31mKeyError\u001b[39m: 'Might'"
      ]
     }
    ],
