finished all notebooks

--- a/1 The Basics.ipynb
+++ b/1 The Basics.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d28a3406",
    "metadata": {},
    "outputs": [],
@@ -110,9 +110,27 @@
     "    total = 0\n",
     "    for char in words:\n",
     "        total += len(char)\n",
-    "    return total\n",
-    "\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cea919c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(total_character_count([\"Hello\", \" world!\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7dec188",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(total_character_count(12345))"
    ]
   },
   {
@@ -120,7 +138,7 @@
    "id": "d3b96670",
    "metadata": {},
    "source": [
-    "#### Check the code"
+    "#### Now with type hints"
    ]
   },
   {
@@ -136,7 +154,8 @@
     "        total += len(char)\n",
     "    return total\n",
     "\n",
-    "print(total_character_count([\"Hello\", \" world!\"]))"
+    "print(total_character_count([\"Hello\", \" world!\"]))\n",
+    "# print(total_character_count(12345))"
    ]
   },
   {
@@ -168,8 +187,16 @@
     "print(total_character_count(word for word in [\"Hello\", \" world!\"])) # generator yielding strings\n",
     "print(total_character_count(iter([\"Hello\", \" world!\"])))         # iterator of strings\n",
     "print(total_character_count(\"Hello world!\"))  \n",
-    "#print(total_character_count(1)) "
+    "print(total_character_count(12345)) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b3fec89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
