--- a/5 Advanced Type Hints.ipynb
+++ b/5 Advanced Type Hints.ipynb
@@ -55,22 +55,124 @@
   },
   {
    "cell_type": "markdown",
+   "id": "efe44d8a",
+   "metadata": {},
+   "source": [
+    "This does *not* define a normal class. It defines a structural type that says:\n",
+    "\n",
+    "**“Any object that provides the HasName interface is acceptable.”**\n",
+    "\n",
+    "No inheritance is required. Notice that the method **get_name** has no implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bf0d2f3e",
    "metadata": {},
    "source": [
-    "### This function call is 100% correct according to the spec\n",
-    "- Data corruption will lead to unexpected down-the-road issues"
+    "#### Using a Protocol in a Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6f779916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet(entity: HasName) -> str:\n",
+    "    return f\"Hello, {entity.get_name()}!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "21bc4dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alpha Squad!\n",
+      "Hello, Percy Jackson!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Team:\n",
+    "    def get_name(self) -> str:\n",
+    "        return \"Alpha Squad\"\n",
+    "\n",
+    "print(greet(Team()))\n",
+    "\n",
+    "class User:\n",
+    "    def get_name(self) -> str:\n",
+    "        return \"Percy Jackson\"\n",
+    "\n",
+    "print(greet(User()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "534f3faf",
+   "metadata": {},
+   "source": [
+    "What the type checker enforces:\n",
+    "- entity must have a get_name() -> str method\n",
+    "- Nothing else is required\n",
+    "- The concrete class is irrelevant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7cee3c0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice\n",
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Protocol\n",
+    "\n",
+    "class HasName[T](Protocol):\n",
+    "    def get_name(self) -> T: ...\n",
+    "\n",
+    "def greet[T](entity: HasName[T]) -> T:\n",
+    "    return entity.get_name()\n",
+    "\n",
+    "class User:\n",
+    "    def __init__(self, name: str):\n",
+    "        self._name = name\n",
+    "\n",
+    "    def get_name(self) -> str:\n",
+    "        return self._name\n",
+    "\n",
+    "class Robot:\n",
+    "    def get_name(self) -> int:\n",
+    "        return 101\n",
+    "\n",
+    "u = User(\"Alice\")\n",
+    "r = Robot()\n",
+    "\n",
+    "print(greet(u))  # inferred as str\n",
+    "print(greet(r))  # inferred as int"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f779916",
+   "id": "02314bc6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "update_attribute(character, \"Might\", -2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
