updated notebook fonts

--- a/2 Char No Type Hints.ipynb
+++ b/2 Char No Type Hints.ipynb
@@ -5,12 +5,12 @@
    "id": "90efca65",
    "metadata": {},
    "source": [
-    "### Figure out how you should use this function..."
+    "Figure out how you should use this function..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "29504f4b",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
    "id": "4785f8a0",
    "metadata": {},
    "source": [
-    "### Comments will make understanding what is going on easier."
+    "Comments will make understanding what is going on easier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e563e54f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
    "id": "838d983f",
    "metadata": {},
    "source": [
-    "### Create character incorrect attributes\n",
+    "Create character incorrect attributes\n",
     "- \"attributes\" misspelled as attribute\n",
     "- \"Agility\" capitalization issue as \"Agilety\"\n",
     "- \"Might\" is capitalized as \"might\""
@@ -83,10 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "577fb08e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Aelar', 'attribute': {'might': 10, 'Agilety': 8}}\n"
+     ]
+    }
+   ],
    "source": [
     "character = {\n",
     "    \"name\": \"Aelar\",\n",
@@ -104,19 +112,40 @@
    "id": "bf0d2f3e",
    "metadata": {},
    "source": [
-    "### This function call is 100% correct according to the spec\n",
+    "This function call is 100% correct according to the spec\n",
     "- Data corruption will lead to unexpected down-the-road issues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6f779916",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'attributes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mupdate_attribute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcharacter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMight\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 23\u001b[39m, in \u001b[36mupdate_attribute\u001b[39m\u001b[34m(character, attribute_name, delta)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mupdate_attribute\u001b[39m(character, attribute_name, delta):\n\u001b[32m      2\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03m    Update a character's attribute by adding a delta value.\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     20\u001b[39m \u001b[33;03m    Returns the updated character dictionary.\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m attribute_name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcharacter\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mattributes\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[32m     24\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mUnknown attribute\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     26\u001b[39m     character[\u001b[33m\"\u001b[39m\u001b[33mattributes\u001b[39m\u001b[33m\"\u001b[39m][attribute_name] += delta\n",
+      "\u001b[31mKeyError\u001b[39m: 'attributes'"
+     ]
+    }
+   ],
    "source": [
     "update_attribute(character, \"Might\", 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41256f4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
