--- a/5 Advanced Type Hints.ipynb
+++ b/5 Advanced Type Hints.ipynb
@@ -5,7 +5,7 @@
    "id": "90efca65",
    "metadata": {},
    "source": [
-    "### Generic Types"
+    "Generic Types"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "838d983f",
    "metadata": {},
    "source": [
-    "### Basic Protocol Example"
+    "Basic Protocol Example"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "id": "bf0d2f3e",
    "metadata": {},
    "source": [
-    "#### Using a Protocol in a Function"
+    "Using a Protocol in a Function"
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7cee3c0c",
    "metadata": {},
    "outputs": [
