--- a/6 What has changed.ipynb
+++ b/6 What has changed.ipynb
@@ -5,7 +5,8 @@
    "id": "257bbac8",
    "metadata": {},
    "source": [
-    "#### Built-in Generics\n",
+    "Built-in Generics\n",
+    "\n",
     "Before"
    ]
   },
@@ -43,7 +44,8 @@
    "id": "369dc918",
    "metadata": {},
    "source": [
-    "#### Union Types\n",
+    "Union Types\n",
+    "\n",
     "Before"
    ]
   },
@@ -83,7 +85,8 @@
    "id": "f0b7aa8c",
    "metadata": {},
    "source": [
-    "#### Type parameters become syntax\n",
+    "Type parameters become syntax\n",
+    "\n",
     "Before"
    ]
   },
@@ -123,7 +126,8 @@
    "id": "65d35f98",
    "metadata": {},
    "source": [
-    "#### Type aliases beome statements\n",
+    "Type aliases beome statements\n",
+    "\n",
     "Before"
    ]
   },
@@ -162,7 +166,8 @@
    "id": "b14dba4a",
    "metadata": {},
    "source": [
-    "#### Forward references in Annotations\n",
+    "Forward references in Annotations\n",
+    "\n",
     "Before (Pre-Python 3.7)"
    ]
   },
