--- a/3 Char With Type Hints.ipynb
+++ b/3 Char With Type Hints.ipynb
@@ -5,7 +5,7 @@
    "id": "90efca65",
    "metadata": {},
    "source": [
-    "### Once you understand type hints this code will be very clear"
+    "Once you understand type hints this code will be very clear"
    ]
   },
   {
@@ -77,16 +77,24 @@
    "id": "838d983f",
    "metadata": {},
    "source": [
-    "### What if we ignore the type warnings\n",
+    "What if we ignore the type warnings\n",
     "- Python will execute without warning\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "577fb08e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Aelar', 'attributes': {'might': 'Big mistake', 'Agility': 8, 'Vitality': 12, 'Insight': 14, 'Arcana': 16, 'Presence': 11}}\n"
+     ]
+    }
+   ],
    "source": [
     "character: Character = {\n",
     "    \"name\": \"Aelar\",\n",
@@ -109,16 +117,29 @@
    "id": "bf0d2f3e",
    "metadata": {},
    "source": [
-    "### This function call is 100% correct according to the spec\n",
+    "This function call is 100% correct according to the spec\n",
     "- Data corruption will lead to unexpected down-the-road issues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f779916",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Might'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mupdate_attribute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcharacter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMight\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 32\u001b[39m, in \u001b[36mupdate_attribute\u001b[39m\u001b[34m(character, attribute_name, delta)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mupdate_attribute\u001b[39m(\n\u001b[32m     28\u001b[39m     character: Character,\n\u001b[32m     29\u001b[39m     attribute_name: AttributeName,\n\u001b[32m     30\u001b[39m     delta: \u001b[38;5;28mint\u001b[39m,\n\u001b[32m     31\u001b[39m ) -> Character:\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m     \u001b[43mcharacter\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mattributes\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mattribute_name\u001b[49m\u001b[43m]\u001b[49m += delta\n\u001b[32m     33\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m character\n",
+      "\u001b[31mKeyError\u001b[39m: 'Might'"
+     ]
+    }
+   ],
    "source": [
     "update_attribute(character, \"Might\", 2)"
    ]
