--- a/5 Advanced Type Hints.ipynb
+++ b/5 Advanced Type Hints.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "29504f4b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "577fb08e",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6f779916",
    "metadata": {},
    "outputs": [],
@@ -86,10 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "21bc4dbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alpha Squad!\n",
+      "Hello, Percy Jackson!\n"
+     ]
+    }
+   ],
    "source": [
     "class Team:\n",
     "    def get_name(self) -> str:\n",
@@ -117,10 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7cee3c0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice\n",
+      "101\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import Protocol\n",
     "\n",
