--- a/3 Char With Type Hints.ipynb
+++ b/3 Char With Type Hints.ipynb
@@ -75,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "577fb08e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Aelar', 'attributes': {'might': 'Big mistake', 'Agility': 8, 'Vitality': 12, 'Insight': 14, 'Arcana': 16, 'Presence': 11}}\n"
+     ]
+    }
+   ],
    "source": [
     "character: Character = {\n",
     "    \"name\": \"Aelar\",\n",
@@ -107,10 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6f779916",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'update_attribute' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mupdate_attribute\u001b[49m(character, \u001b[33m\"\u001b[39m\u001b[33mMight\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m2\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'update_attribute' is not defined"
+     ]
+    }
+   ],
    "source": [
     "update_attribute(character, \"Might\", 2)"
    ]
