--- a/1 The Basics.ipynb
+++ b/1 The Basics.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b9ea2564",
    "metadata": {},
    "outputs": [
@@ -57,12 +57,12 @@
     }
    ],
    "source": [
-    "print(say_hi(\"  arion silvaris \"))"
+    "print(say_hi(\"  aragorn telcontar \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "908de96b",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "print(say_hi([\"  arion silvaris \"]))"
+    "print(say_hi([\"  elrond halfelven \"]))"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(say_hi([\"  arion silvaris \"]))"
+    "print(say_hi([\"  boromir denethorian \"]))"
    ]
   },
   {
@@ -175,8 +175,9 @@
     "        total += len(char)\n",
     "    return total\n",
     "\n",
+    "\n",
     "print(total_character_count([\"Hello\", \" world!\"]))\n",
-    "#print(total_character_count(12345))"
+    "print(total_character_count(12345))"
    ]
   },
   {
@@ -196,19 +197,23 @@
    "source": [
     "from collections.abc import Iterable\n",
     "\n",
+    "\n",
     "def total_character_count(words: Iterable[str]) -> int:\n",
     "    total = 0\n",
     "    for char in words:\n",
     "        total += len(char)\n",
     "    return total\n",
     "\n",
-    "print(total_character_count([\"Hello\", \" world!\"]))               # list of strings\n",
-    "print(total_character_count((\"Hello\", \" world!\")))               # tuple of strings\n",
-    "print(total_character_count({\"Hello\", \" world!\"}))               # set of strings\n",
-    "print(total_character_count(word for word in [\"Hello\", \" world!\"])) # generator yielding strings\n",
-    "print(total_character_count(iter([\"Hello\", \" world!\"])))         # iterator of strings\n",
-    "print(total_character_count(\"Hello world!\"))  \n",
-    "print(total_character_count(12345)) "
+    "\n",
+    "print(total_character_count([\"Hello\", \" world!\"]))  # list of strings\n",
+    "print(total_character_count((\"Hello\", \" world!\")))  # tuple of strings\n",
+    "print(total_character_count({\"Hello\", \" world!\"}))  # set of strings\n",
+    "print(\n",
+    "    total_character_count(word for word in [\"Hello\", \" world!\"])\n",
+    ")  # generator yielding strings\n",
+    "print(total_character_count(iter([\"Hello\", \" world!\"])))  # iterator of strings\n",
+    "print(total_character_count(\"Hello world!\"))\n",
+    "print(total_character_count(12345))"
    ]
   },
   {
