--- a/3 Char With Type Hints.ipynb
+++ b/3 Char With Type Hints.ipynb
@@ -35,6 +35,7 @@
     "    \"Presence\",\n",
     "]\n",
     "\n",
+    "\n",
     "class Attributes(TypedDict):\n",
     "    Might: int\n",
     "    Agility: int\n",
@@ -56,6 +57,7 @@
     ") -> Character:\n",
     "    character[\"attributes\"][attribute_name] += delta\n",
     "    return character\n",
+    "\n",
     "\n",
     "character: Character = {\n",
     "    \"name\": \"Aelar\",\n",
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "577fb08e",
    "metadata": {},
    "outputs": [
@@ -99,8 +101,8 @@
     "character: Character = {\n",
     "    \"name\": \"Aelar\",\n",
     "    \"attributes\": {\n",
-    "        \"might\": \"Big mistake\",\n",
-    "        \"Agility\": 8,\n",
+    "        \"Might\": 35,\n",
+    "        \"Agility\": \"Big Mistake\",\n",
     "        \"Vitality\": 12,\n",
     "        \"Insight\": 14,\n",
     "        \"Arcana\": 16,\n",
