--- a/4 Char Pydantic for API.ipynb
+++ b/4 Char Pydantic for API.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "29504f4b",
    "metadata": {},
    "outputs": [],
@@ -28,11 +28,15 @@
     "    \"Presence\",\n",
     "]\n",
     "\n",
-    "AttributeValue = Annotated[int, Field(description=\"Attribute value can be between 1 and 100\",ge=1, le=100)]\n",
+    "\n",
+    "AttributeValue = Annotated[\n",
+    "    int, Field(description=\"Attribute value can be between 1 and 100\", ge=1, le=100)\n",
+    "]\n",
+    "\n",
     "\n",
     "class Attributes(BaseModel):\n",
     "    model_config = ConfigDict(validate_assignment=True)\n",
-    "    \n",
+    "\n",
     "    Might: AttributeValue\n",
     "    Agility: AttributeValue\n",
     "    Vitality: AttributeValue\n",
@@ -58,6 +62,7 @@
     "    setattr(character.attributes, attribute_name, new_value)\n",
     "\n",
     "    return character\n",
+    "\n",
     "\n",
     "character = Character(\n",
     "    name=\"Aelar\",\n",
@@ -87,19 +92,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "character = Character.model_validate({\n",
-    "    \"name\": \"Aelar\",\n",
-    "    \"attributes\": {\n",
-    "        \"might\": 90,\n",
-    "        \"Agility\": 8,\n",
-    "        \"Vitality\": 12,\n",
-    "        \"Insight\": 14,\n",
-    "        \"Arcana\": 16,\n",
-    "        \"Presence\": 11,\n",
-    "        \"tset\": 123,\n",
+    "character = Character.model_validate(\n",
+    "    {\n",
+    "        \"name\": \"Aelar\",\n",
+    "        \"attributes\": {\n",
+    "            \"might\": 90,\n",
+    "            \"Agility\": 8,\n",
+    "            \"Vitality\": 12,\n",
+    "            \"Insight\": 14,\n",
+    "            \"Arcana\": 16,\n",
+    "            \"Presence\": 11,\n",
+    "            \"tset\": 123,\n",
+    "        },\n",
     "    }\n",
-    "}\n",
     ")\n",
     "\n",
     "print(character)"
