--- a/5 Advanced Type Hints.ipynb
+++ b/5 Advanced Type Hints.ipynb
@@ -19,13 +19,16 @@
     "def identity[TypeValue](x: TypeValue) -> TypeValue:\n",
     "    return x\n",
     "\n",
+    "\n",
     "# Typical Convention Variable Name\n",
     "def identity2[T](x: T) -> T:\n",
     "    return x\n",
     "\n",
+    "\n",
     "# Generic Pair Example\n",
     "def pair[Left, Right](a: Left, b: Right) -> tuple[Left, Right]:\n",
     "    return a, b\n",
+    "\n",
     "\n",
     "# Domain Specific Example\n",
     "def echo[Message](msg: Message) -> Message:\n",
@@ -49,8 +52,9 @@
    "source": [
     "from typing import Protocol\n",
     "\n",
+    "\n",
     "class HasName(Protocol):\n",
-    "    def get_name(self) -> str: ...\n"
+    "    def get_name(self) -> str: ..."
    ]
   },
   {
@@ -104,11 +108,14 @@
     "    def get_name(self) -> str:\n",
     "        return \"Alpha Squad\"\n",
     "\n",
+    "\n",
     "print(greet(Team()))\n",
+    "\n",
     "\n",
     "class User:\n",
     "    def get_name(self) -> str:\n",
     "        return \"Percy Jackson\"\n",
+    "\n",
     "\n",
     "print(greet(User()))"
    ]
@@ -142,11 +149,14 @@
    "source": [
     "from typing import Protocol\n",
     "\n",
+    "\n",
     "class HasName[T](Protocol):\n",
     "    def get_name(self) -> T: ...\n",
     "\n",
+    "\n",
     "def greet[T](entity: HasName[T]) -> T:\n",
     "    return entity.get_name()\n",
+    "\n",
     "\n",
     "class User:\n",
     "    def __init__(self, name: str):\n",
@@ -155,9 +165,11 @@
     "    def get_name(self) -> str:\n",
     "        return self._name\n",
     "\n",
+    "\n",
     "class Robot:\n",
     "    def get_name(self) -> int:\n",
     "        return 101\n",
+    "\n",
     "\n",
     "u = User(\"Alice\")\n",
     "r = Robot()\n",
