--- a/6 What has changed.ipynb
+++ b/6 What has changed.ipynb
@@ -18,6 +18,8 @@
    "outputs": [],
    "source": [
     "from typing import List, Dict\n",
+    "\n",
+    "\n",
     "def f(xs: List[int]) -> Dict[str, int]: ..."
    ]
   },
@@ -57,6 +59,7 @@
    "outputs": [],
    "source": [
     "from typing import Union, Optional\n",
+    "\n",
     "x: Union[int, str]\n",
     "y: Optional[int]"
    ]
@@ -98,7 +101,9 @@
    "outputs": [],
    "source": [
     "from typing import TypeVar\n",
+    "\n",
     "T = TypeVar(\"T\")\n",
+    "\n",
     "\n",
     "def first(xs: list[T]) -> T: ..."
    ]
@@ -139,6 +144,7 @@
    "outputs": [],
    "source": [
     "from typing import TypeAlias\n",
+    "\n",
     "UserId: TypeAlias = int"
    ]
   },
@@ -179,8 +185,7 @@
    "outputs": [],
    "source": [
     "class User:\n",
-    "    def manager(self) -> \"User\":\n",
-    "        ..."
+    "    def manager(self) -> \"User\": ..."
    ]
   },
   {
@@ -200,9 +205,9 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
+    "\n",
     "class User:\n",
-    "    def manager(self) -> User:\n",
-    "        ..."
+    "    def manager(self) -> User: ..."
    ]
   },
   {
@@ -221,8 +226,7 @@
    "outputs": [],
    "source": [
     "class User:\n",
-    "    def manager(self) -> User:\n",
-    "        ..."
+    "    def manager(self) -> User: ..."
    ]
   },
   {
