--- a/presentations/01presentation_say_hi.qmd
+++ b/presentations/01presentation_say_hi.qmd
@@ -27,7 +27,10 @@ def say_hi(name):
 <h2 data-id="title">Comments get stale quickly</h2>
 
 ```{python}
-#| code-line-numbers: "|2-5,8"
+#| code-line-numbers: "4-9"
+def say_hi(name):
+    return f"Hey {name.strip().title()}!"
+
 def say_hi(name):
     """
     Input: name: str (no other type supported)
@@ -40,6 +43,9 @@ def say_hi(name):
 <h2 data-id="title">Correct usage...</h2>
 
 ```{python}
+def say_hi(name):
+    return f"Hey {name.strip().title()}!"
+
 def say_hi(name):
     """
     Input: name: str (no other type supported)
@@ -55,6 +61,9 @@ print(say_hi("  zerbial supra "))
 ```{python}
 #| code-line-numbers: "10"
 def say_hi(name):
+    return f"Hey {name.strip().title()}!"
+
+def say_hi(name):
     """
     Input: name: str (no other type supported)
     Output: str
@@ -66,10 +75,21 @@ print(say_hi(["  arion silvaris "])) # <1>
 1. No type hint is shown!
 
 ## {auto-animate=true}
-<h2 data-id="title">With type hints / annotations</h2>
+<h2 data-id="title">Comparison without and with type hints / annotations</h2>
 
 ```{python}
-#| code-line-numbers: "|1"
+#| code-line-numbers: "|11-13"
+def say_hi(name):
+    return f"Hey {name.strip().title()}!"
+    
+def say_hi(name):
+    """
+    Input: name: str (no other type supported)
+    Output: str
+    """
+    return f"Hey {name.strip().title()}!"
+
+# With Type Annotations
 def say_hi(name: str) -> str:
     return f"Hey {name.strip().title()}!" 
 
@@ -98,3 +118,4 @@ print(say_hi(["  boromir denethorian "])) # <1>
 
 ```
 1. Argument of type "list[str]" cannot be assigned to parameter "name" of type "str" in function "say_hi"
+## {auto-animate=true}
