--- a/presentations/02presentation_flee_you_fools.qmd
+++ b/presentations/02presentation_flee_you_fools.qmd
@@ -14,6 +14,11 @@ format:
       error: true
 theme: dark
 ---
+```{python}
+#| include: false
+%xmode Plain
+```
+
 ## {auto-animate=true}
 <h2 data-id="title">What is this function’s expected type?</h2>
 
