--- a/presentations/05presentation_what_has_changed.qmd
+++ b/presentations/05presentation_what_has_changed.qmd
@@ -14,6 +14,10 @@ format:
       error: true
 theme: dark
 ---
+```{python}
+#| include: false
+%xmode Plain
+```
 
 ## {auto-animate=true}
 <h2 data-id="title">Built-in Generic Types</h2>
